# IntegritasTecnica

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
IntegritasTecnica/: urls.py  wsgi.py
IntegritasTecnica/apps/home/: apps.py
IntegritasTecnica/apps/pdf_inverter/: apps.py  forms.py  urls.py  views.py
IntegritasTecnica/apps/users/: apps.py  forms.py  managers.py  models.py  urls.py  views.py
IntegritasTecnica/apps/users/api/: serializers.py  urls.py  view.py
IntegritasTecnica/apps/users/migrations/: 0001_initial.py  0002_user_phone_number.py
IntegritasTecnica/templates/: base.html
IntegritasTecnica/templates/home/: index.html
IntegritasTecnica/templates/pdf_inverter/: upload.html
IntegritasTecnica/templates/users/: user_confirm_delete.html  user_form.html  user_list.html
config/: asgi.py  urls.py
config/settings/: base.py  local.py
